# Optimised-Research-Agent

./: .env.example  .gitignore  LICENSE  README.md  ingest_pdf.py  pyproject.toml  requirements.txt
.chroma/: chroma.sqlite3
llamascholar/: agent_runner.py  api.py  embeddings.py  graph_runner.py  memory.py  rag_tool.py  tool_registry.py
llamascholar/tools/: __init__.py  arxiv.py  duckduckgo.py
static/: index.html
